infra/aws/k8s/apps/namespace.yaml
# Apps Namespace Configuration
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    name: apps
    tier: application
    istio-injection: enabled
  annotations:
    scheduler.alpha.kubernetes.io/node-selector: 'workload-type=application'
